[package]
name = "fusion-engine-geyser"
version = "0.1.0"
edition = "2021"
authors = ["M81 Network Developers <support@m81.network>"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-dup = "1.2.2"
futures-lite = "1.12.0"
lazy_static = "1.4.0"
log = "0.4.17"
sled = "0.34.7"
smol = "1.3.0"
solana-geyser-plugin-interface = "1.15.0"
solana-logger = "1.15.0"
solana-sdk = "1.15.0"
solana-transaction-status = "1.15.0"
